--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "cy": "cypress open",
     "e2e": "start-server-and-test start http-get://localhost:3000 cy",
@@ -24,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "arui-presets-lint": "^6.0.1",
+    "gh-pages": "^5.0.0",
     "cypress": "^11.0.1",
     "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
